fixes browser dropdown overlap bug in IE11

--- a/static/css/components/header-bar.less
+++ b/static/css/components/header-bar.less
@@ -538,6 +538,7 @@
     .logo-component {
       .logo-icon {
         height: 47px;
+        width: 194px;
       }
     }
 
